--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -50,10 +50,10 @@ bindsym $mod+$up focus up
 bindsym $mod+$right focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+# bindsym $mod+Left focus left
+# bindsym $mod+Down focus down
+# bindsym $mod+Up focus up
+# bindsym $mod+Right focus right
 
 # move focused window
 bindsym $mod+Shift+$left move left
@@ -62,10 +62,10 @@ bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+# bindsym $mod+Shift+Left move left
+# bindsym $mod+Shift+Down move down
+# bindsym $mod+Shift+Up move up
+# bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+semicolon split h
@@ -145,10 +145,10 @@ mode "resize" {
         bindsym $right resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        # bindsym Left resize shrink width 10 px or 10 ppt
+        # bindsym Down resize grow height 10 px or 10 ppt
+        # bindsym Up resize shrink height 10 px or 10 ppt
+        # bindsym Right resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -162,6 +162,7 @@ mode "launch" {
         bindsym p exec --no-startup-id "firefox --private-window" mode "default"
         bindsym s exec --no-startup-id "spotify" mode "default"
         bindsym c exec --no-startup-id "chromium" mode "default"
+        bindsym i exec --no-startup-id "chromium --incognito" mode "default"
         bindsym d exec --no-startup-id "dwb" mode "default"
         bindsym z exec --no-startup-id "zathura" mode "default"
 
@@ -171,6 +172,16 @@ mode "launch" {
 }
 
 bindsym $mod+n mode "launch"
+
+mode "screen" {
+        bindsym a exec --no-startup-id "xrandr --output HDMI1 --auto --right-of eDP1" mode "default"
+        bindsym o exec --no-startup-id "xrandr --output HDMI1 --off" mode "default"
+        bindsym m exec --no-startup-id "xrandr --output HDMI1 --same-as eDP1" mode "default"
+
+        bindsym Escape mode "default"
+}
+
+bindsym $mod+c mode "screen"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -183,18 +194,18 @@ exec --no-startup-id /usr/bin/setxkbmap -option "caps:swapescape"
 
 # Pulse Audio controls
 #increase sound volume
-bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume 0 +5%" 
+bindsym XF86AudioRaiseVolume exec --no-startup-id "pactl set-sink-volume 1 +5%" 
 #decrease sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume 0 -5%"
+bindsym XF86AudioLowerVolume exec --no-startup-id "pactl set-sink-volume 1 -5%"
 # mute sound
-bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute 0 toggle"
+bindsym $mod+m exec --no-startup-id "pactl set-sink-mute 1 toggle"
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 20 # decrease screen brightness
 
 # Touchpad controls
-bindsym $mod+F1 exec --no-startup-id ~/.i3/touchpad.sh # toggle touchpad
+bindsym $mod+F6 exec --no-startup-id ~/.i3/touchpad.sh # toggle touchpad
 
 # Media player controls
 bindsym XF86AudioPlay exec --no-startup-id playerctl play
@@ -209,7 +220,10 @@ exec --no-startup-id "i3-sensible-terminal"
 new_window pixel 1
 
 #set background
-exec --no-startup-id "feh --bg-scale /media/data/pictures/wallpapers/AutumnStreet.jpg"
+exec --no-startup-id "feh --bg-scale /home/sid/pictures/wallpapers/autumnstreet.jpg"
 
 #battery notifications
 exec --no-startup-id "/bin/bash ~/.i3/batt_script.sh"
+
+#float octave plots
+for_window [title="Figure 1"] floating enable
